// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractButton renders with base props for default variant 1`] = `
<button
  className="lab-btn lab-btn--default lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Default Button
</button>
`;

exports[`AbstractButton renders with base props for outline variant 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Button
</button>
`;

exports[`AbstractButton renders with base props for text variant 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Text Button
</button>
`;
